established connection to DB and fixed some versions