@@ -3,9 +3,13 @@ organization := "de.htw-berlin"
 
 version := "1.0-SNAPSHOT"
 
-lazy val root = (project in file(".")).enablePlugins(PlayScala)
+lazy val root = (project in file("."))
+  .enablePlugins(PlayScala)
+  .settings(
+    javaOptions += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+  )
 
-scalaVersion := "2.12.18"
+scalaVersion := "2.13.12"
 
 libraryDependencies ++= Seq(
   guice,
